--- a/car-client-app/src/app/components/cars/details/details.component.html
+++ b/car-client-app/src/app/components/cars/details/details.component.html
@@ -1,1 +1,6 @@
-<p>details works!</p>
+<a [routerLink]="['/update/1']">Edytuj</a>
+<a [routerLink]="['/delete/1']">Usuń</a>
+<br>
+<div class="outer-outlet">
+  <router-outlet></router-outlet>
+</div>
