--- a/car-client-app/src/app/components/cars/overview/overview.component.html
+++ b/car-client-app/src/app/components/cars/overview/overview.component.html
@@ -1,1 +1,6 @@
-<p>overview works!</p>
+<a [routerLink]="['/edit/1']">
+  <img class="overview-image-size" src="https://mklr.pl/uimages/services/motokiller/i18n/pl_PL/201801/$_bmw_e39_m5_v8_$1516124740_by_Amotive.jpg?1516171255">
+</a>
+<div class="inner-outlet">
+  <router-outlet></router-outlet>
+</div>
