--- a/car-client-app/src/app/components/cars/overview/overview.component.css
+++ b/car-client-app/src/app/components/cars/overview/overview.component.css
@@ -2,18 +2,29 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 3em 5em 5em 5em;
-  justify-content: center;
+  padding: 3em 0em 5em 3em;
+  justify-content: left;
 }
 
 .overview-container-image-size {
-  background-color: red;
+  background-color: #4bc2c5;
   margin-right: 3em;
-  width: 18em;
+  margin-bottom: 3em;
+  width: 19em;
   height: 30em;
   display: flex;
   flex-direction: column;
   border-radius: 10px;
+  transition: 0.5s;
+  cursor: pointer;
+}
+
+.overview-container-image-size:hover {
+  transform: scale(1.1);
+}
+
+.overview-container-image-size: {
+
 }
 
 .overview-image-size {
