--- a/car-client-app/src/app/components/cars/overview/overview.component.css
+++ b/car-client-app/src/app/components/cars/overview/overview.component.css
@@ -22,6 +22,7 @@
 
 .overview-container-image-size:hover {
   transform: scale(1.1);
+  background-color: rgb(81, 231, 236);
 }
 
 .overview-image-size {
