OverView Comp Fix

--- a/car-client-app/src/app/components/cars/overview/overview.component.html
+++ b/car-client-app/src/app/components/cars/overview/overview.component.html
@@ -16,7 +16,7 @@
               <strong>Przebieg: </strong><span>{{car.mileage}}</span>
           </p>
           <p style="padding-left: 10px;">
-              <strong>Rok produkcji: </strong><span>{{car.production}}</span>
+              <strong>Rok produkcji: </strong><span>{{car.production.substr(0,4)}}</span>
           </p>
           <p style="padding-left: 10px;">
               <strong>Opis: </strong><span>{{car.description}}</span>
