--- a/car-client-app/src/app/app.component.html
+++ b/car-client-app/src/app/app.component.html
@@ -12,6 +12,6 @@
   </span>
 </nav>
 <br>
-<div style="" class="outer-outlet">
+<div class="outer-outlet">
   <router-outlet></router-outlet>
 </div>
