--- a/car-client-app/src/app/components/cars/add/add.component.html
+++ b/car-client-app/src/app/components/cars/add/add.component.html
@@ -1,61 +1,61 @@
 <div class="add-car-main">
   <div class="container car-form">
     <h3>Wprowadź dane ogłoszenia</h3>
-    <form>
+    <form [formGroup]="carForm">
       <div class="form-group">
         <label>Marka</label>
-        <input type="text" class="form-control" name="brand" [(ngModel)]="car.brand" required>
+        <input type="text" class="form-control" name="brand" formControlName="brand">
       </div>
       <div class="form-group">
         <label>Model</label>
-        <input type="text" class="form-control" name="model" [(ngModel)]="car.model" required>
+        <input type="text" class="form-control" name="model" formControlName="model">
       </div>
       <div class="form-group">
         <label>Silnik</label>
-        <input type="text" class="form-control" name="silnik" [(ngModel)]="car.engine">
+        <input type="text" class="form-control" name="silnik" formControlName="engine">
       </div>
       <div class="form-group">
         <label>Moc</label>
-        <input type="number" class="form-control" name="moc" [(ngModel)]="car.power">
+        <input type="number" class="form-control" name="moc" formControlName="power">
       </div>
       <div class="form-group">
         <label>Przebieg</label>
-        <input type="number" class="form-control" name="przebieg" [(ngModel)]="car.mileage">
+        <input type="number" class="form-control" name="przebieg" formControlName="mileage">
       </div>
       <div class="form-group">
         <label>Rok produkcji</label>
-        <input type="text" class="form-control" name="rok" [(ngModel)]="car.production">
+        <input type="number" class="form-control" name="rok" formControlName="production">
       </div>
       <div class="form-group">
         <label>Link do zdjęcia</label>
-        <input type="url" class="form-control" name="imagePath" [(ngModel)]="car.imagePath">
+        <input type="url" class="form-control" name="imagePath" formControlName="imagePath">
       </div>
       <div class="form-group">
         <label>Opis</label>
-        <textarea class="form-control" name="opis" [(ngModel)]="car.description"></textarea>
+        <textarea class="form-control" name="opis" formControlName="description"></textarea>
       </div>
-      <button type="submit" class="btn btn-success" (click)="onSubmit()">Dodaj</button>
+      <button type="submit" class="btn btn-success" [disabled]="!carForm.valid" (click)="onSubmit()">Dodaj</button>
     </form>
   </div>
     <div class="overview-container-image-size">
       <div style="display: flex; align-items: center; justify-content: center; margin-top: 0.5em;">
-        <img class="overview-image-size" [src]="car.imagePath === '' ? getImgContent(this.noImage) : getImgContent(car.imagePath)">
+        <img class="overview-image-size" [src]="carForm.value.imagePath === '' ? getImgContent(this.noImage) : getImgContent(carForm.value.imagePath)">
       </div>
       <div>
         <p style="padding-left: 10px;">
-          <strong>Samochód: </strong><span>{{car.brand}} {{car.model}}</span>
+          <strong>Samochód: </strong><span>{{ carForm.value.brand }} {{carForm.value.model}}</span>
         </p>
         <p style="padding-left: 10px;">
-            <strong>Silnik: </strong><span>{{car.engine}} {{car.power}} KM</span>
+            <strong>Silnik: </strong><span>{{carForm.value.engine}} {{carForm.value.power}} KM</span>
         </p>
         <p style="padding-left: 10px;">
-            <strong>Przebieg: </strong><span>{{car.mileage}}</span>
+            <strong>Przebieg: </strong><span>{{carForm.value.mileage}}</span>
         </p>
         <p style="padding-left: 10px;">
-            <strong>Rok produkcji: </strong><span>{{car.production}}</span>
+            <strong>Rok produkcji: </strong><span>{{carForm.value.production}}</span>
         </p>
         <p style="padding-left: 10px;">
-            <strong>Opis: </strong><span>{{car.description}}</span>
+            <strong>Opis: </strong><span>{{carForm.value.description}}</span>
         </p>
     </div>
 </div>
