--- a/car-client-app/src/app/components/cars/add/add.component.html
+++ b/car-client-app/src/app/components/cars/add/add.component.html
@@ -5,6 +5,7 @@
       <div class="form-group">
         <label>Marka</label>
         <input type="text" class="form-control" name="brand" formControlName="brand">
+        <span *ngIf="carForm."></span>
       </div>
       <div class="form-group">
         <label>Model</label>
