LandingPage with animation

--- a/CarShowroomFront/src/app/components/cars/home/home.component.html
+++ b/CarShowroomFront/src/app/components/cars/home/home.component.html
@@ -1,1 +1,31 @@
-<p>home works!</p>
+<div class="landing-page">
+  <div class="image-container">
+    <img src="../../../../assets/img/clipart95648.png">
+  </div>
+  <div class="text-container">
+    <div class="title">
+      CarShowroom App
+    </div>
+    <div class="fading-effect"></div>
+  </div>
+  <div class="button-section">
+    <a [routerLink]="['/overview']">
+      <button mat-raised-button>
+        Get Started!
+      </button>
+    </a>
+  </div>
+  <div class="links">
+    <p>
+      <a href="https://www.linkedin.com/in/adam-gajek-50842b185/" target="_blank">
+        <img class="logo" src="https://www.oprojektowaniu.pl/wp-content/uploads/2017/02/official-linkedin-logo-tile-300x300.png">
+      </a>
+      <a href="https://github.com/agajek777" target="_blank">
+        <img class="logo" src="https://image.flaticon.com/icons/png/512/37/37318.png">
+      </a>
+      <a href="https://stackoverflow.com/users/13636701/agajek777" target="_blank">
+        <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Stack_Overflow_icon.svg/768px-Stack_Overflow_icon.svg.png">
+      </a>
+    </p>
+  </div>
+</div>
