Overview Tab use API

--- a/CarShowroomFront/src/app/components/cars/home/home.component.css
+++ b/CarShowroomFront/src/app/components/cars/home/home.component.css
@@ -43,7 +43,7 @@
   right: 0;
   width: 0%;
   height: 24px;
-  background: #b0f8dc;
+  background: #caf8e6;
   animation: text-slide 4s cubic-bezier(.5, .5, 0, 1);
 }
 
