--- a/CarShowroomFront/src/app/components/cars/home/home.component.html
+++ b/CarShowroomFront/src/app/components/cars/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="landing-page">
   <div class="image-container">
-    <img src="../../../../assets/img/clipart95648.png">
+    <img src="https://www.clipartmax.com/png/full/9-95648_green-car-clip-art-green-car-clip-art.png" alt="car">
   </div>
   <div class="text-container">
     <div class="title">
