--- a/CarShowroomFront/src/app/components/cars/overview/overview.component.html
+++ b/CarShowroomFront/src/app/components/cars/overview/overview.component.html
@@ -1,1 +1,18 @@
-<p>overview works!</p>
+<div class="upper-section">
+  <h2>Car Offers</h2>
+</div>
+<div class="cars-list">
+  <div *ngFor="let car of cars" class="car-item">
+    <div class="avatar">
+      <img [src]="car.imagePath">
+    </div>
+    <div class="details">
+      <p>Model: {{ car.brand }} {{ car.model }}</p>
+      <p>Engine: {{ car.engine }} {{ car.power }}</p>
+      <p>Production: {{ car.production.substr(0, 4) }}</p>
+      <p>Price: {{ car.price }} $</p>
+      <p *ngIf="car.description.length >= 60">Description: {{ car.description.substr(0, 60) }} <strong>(read more...)</strong></p>
+      <p *ngIf="car.description.length < 60">Description: {{ car.description }}</p>
+    </div>
+  </div>
+</div>
