Add New Offer func

--- a/CarShowroomFront/src/app/components/cars/add/add.component.html
+++ b/CarShowroomFront/src/app/components/cars/add/add.component.html
@@ -1,1 +1,4 @@
-<p>add works!</p>
+<div class="main">
+  <h1>New offer</h1>
+  <app-form (submitCar)="addCar($event)" #form class="form"></app-form>
+</div>
