Background color change

--- a/CarShowroomFront/src/app/components/cars/add/form/form.component.html
+++ b/CarShowroomFront/src/app/components/cars/add/form/form.component.html
@@ -22,7 +22,7 @@
       <mat-form-field appearance="standard">
         <mat-label>Engine</mat-label>
         <input formControlName="engine" matInput placeholder="Ex. 6.3">
-        <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+        <mat-icon matSuffix>whatshot</mat-icon>
         <mat-hint>Enter your car's engine</mat-hint>
       </mat-form-field>
     </p>
