--- a/CarShowroomFront/src/app/components/cars/home/home.component.css
+++ b/CarShowroomFront/src/app/components/cars/home/home.component.css
@@ -10,6 +10,7 @@
   height: 100%;
   width: 200px;
   font-size: 23px;
+  color: #0e6d47;
 }
 
 .image-container {
@@ -43,7 +44,7 @@
   right: 0;
   width: 0%;
   height: 24px;
-  background: #caf8e6;
+  background: #ffffff;
   animation: text-slide 4s cubic-bezier(.5, .5, 0, 1);
 }
 
