REST API Repository and Mapper Clean Up

--- a/CarShowroomFront/src/app/components/cars/details/details.component.css
+++ b/CarShowroomFront/src/app/components/cars/details/details.component.css
@@ -98,7 +98,7 @@
 
 @media screen and (min-width: 1600px) {
   .avatar img {
-    width: 30vw;
+    max-height: 39vh;
     margin-right: 20px;
   }
 }
