--- a/CarShowroomFrontEnd/src/app/main-nav/main-nav.component.html
+++ b/CarShowroomFrontEnd/src/app/main-nav/main-nav.component.html
@@ -8,6 +8,7 @@
       <a mat-list-item [routerLink]="['/']">Home</a>
       <a mat-list-item [routerLink]="['/overview']">Overview</a>
       <a mat-list-item [routerLink]="['/add']">New offer</a>
+      <a mat-list-item [routerLink]="['/login']">Login</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
@@ -25,6 +26,7 @@
         <a [routerLink]="['/']">Home</a>
         <a [routerLink]="['/overview']">Overview</a>
         <a [routerLink]="['/add']">New offer</a>
+        <a [routerLink]="['/login']">Login</a>
       </div>
     </mat-toolbar>
     <ng-content></ng-content>
