Edit default page size, add error handling in client

--- a/CarShowroomFrontEnd/src/app/components/cars/details/details.component.css
+++ b/CarShowroomFrontEnd/src/app/components/cars/details/details.component.css
@@ -90,6 +90,14 @@
     align-items: center;
   }
 
+  .description-bigger {
+    display: block;
+    display: flex;
+    flex-direction: row;
+    font-size: 20px;
+    margin: 20px 0 20px;
+  }
+
   .avatar img {
     max-height: 35vh;
     width: auto;
