--- a/CarShowroomFrontEnd/src/app/components/cars/details/details.component.html
+++ b/CarShowroomFrontEnd/src/app/components/cars/details/details.component.html
@@ -12,10 +12,10 @@
         <p><span>Engine</span>: {{ car.engine }} {{ car.power }} HP</p>
         <p><span>Production</span>: {{ car.production.substr(0, 4) }}</p>
         <p><span>Price</span>: {{ car.price }} $</p>
-        <p class="mobile"><span>Description</span>: {{ car.description }}</p>
+        <p *ngIf="car.description.length !== 0" class="mobile"><span>Description</span>: {{ car.description }}</p>
       </div>
     </div>
-    <div class="description-bigger">
+    <div *ngIf="car.description.length !== 0" class="description-bigger">
       <div><span>Description:</span></div>
       <div style="max-width: 450px;">{{ car.description }}</div>
     </div>
