--- a/CarShowroomFrontEnd/src/app/components/cars/overview/overview.component.css
+++ b/CarShowroomFrontEnd/src/app/components/cars/overview/overview.component.css
@@ -44,6 +44,16 @@
   padding: 10px 25px 0;
 }
 
+.pages {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.buttons button {
+  margin: 0px 7px 30px;
+}
+
 @media screen and (min-width: 628px) {
   .cars-list {
     margin-left: 35px;
