Add smooth scroll

--- a/CarShowroomFrontEnd/src/app/components/cars/overview/overview.component.html
+++ b/CarShowroomFrontEnd/src/app/components/cars/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div class="upper-section">
+<div class="upper-section" #top>
   <h2>Car Offers</h2>
 </div>
 <div class="lower-section">
@@ -22,10 +22,10 @@
 <div class="pages">
   <h3>Page {{ currentPage }} of {{ totalPages }}</h3>
   <div class="buttons">
-    <button (click)="previousPage()" mat-fab class="edit-button" [disabled]="!hasPrevious" [ngClass]="{'disabled': !hasPrevious}">
+    <button (click)="scrollTop(top); previousPage()" mat-fab class="edit-button" [disabled]="!hasPrevious" [ngClass]="{'disabled': !hasPrevious}">
       <mat-icon>arrow_back</mat-icon>
     </button>
-    <button (click)="nextPage()" mat-fab style="background-color: #17b978;" [disabled]="!hasNext" [ngClass]="{'disabled': !hasNext}">
+    <button (click)="scrollTop(top); nextPage()" mat-fab style="background-color: #17b978;" [disabled]="!hasNext" [ngClass]="{'disabled': !hasNext}">
       <mat-icon>arrow_forward</mat-icon>
     </button>
   </div>
