Add Canvas clock

--- a/CarShowroomFrontEnd/src/app/components/cars/home/home.component.html
+++ b/CarShowroomFrontEnd/src/app/components/cars/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="landing-page">
+  <div class="clock">
+    <canvas #canvas width="150" height="150"></canvas>
+  </div>
   <div class="image-container">
     <img src="assets/img/clipart95648.jpg" alt="car">
   </div>
