--- a/CarShowroomFrontEnd/src/app/components/cars/home/home.component.css
+++ b/CarShowroomFrontEnd/src/app/components/cars/home/home.component.css
@@ -6,6 +6,15 @@
   overflow: hidden;
 }
 
+.clock {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 45px;
+}
+
 .title {
   height: 100%;
   width: 200px;
